force-app/main/default/objects/FamilySurvey__c/FamilySurvey__c.object-meta.xml
<CustomObject>
    <label>FamilySurvey</label>
    <nameField>
        <label>FamilySurvey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FamilySurveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>