force-app/main/default/objects/FamilySurvey__c/fields/FamilySurveyLifetime__c.field-meta.xml
<CustomField>
    <fullName>FamilySurveyLifetime__c</fullName>
    <inlineHelpText>Based on account start date</inlineHelpText>
    <label>SurveyLifetime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>