force-app/main/default/objects/FamilySurvey__c/fields/FamilyType__c.field-meta.xml
<CustomField>
    <fullName>FamilyType__c</fullName>
    <label>FamilyType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bereaved Family</fullName>
            </value>
            <value>
                <fullName>Offspring Bereaved</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Offspring Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>