force-app/main/default/objects/FamilySurvey__c/fields/JotformID__c.field-meta.xml
<CustomField>
    <fullName>JotformID__c</fullName>
    <label>JotformID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>