force-app/main/default/objects/FamilySurvey__c/fields/SurveyExpiry__c.field-meta.xml
<CustomField>
    <fullName>SurveyExpiry__c</fullName>
    <label>SurveyExpiry</label>
    <type>DateTime</type>
</CustomField>